# test_tasks_tetrika

./: .gitignore  Makefile  README.md  Task.md  pyproject.toml
.github/workflows/: main.yml
tasks/: __init__.py
tasks/task_1/: __init__.py  decorator.py  task.md
tasks/task_2/: __init__.py  beasts.csv  solution.py
tasks/task_3/: __init__.py  solution.py
tests/: test_appearance.py  test_decorator.py  test_parser.py
